k8s_resources/prepared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: workshop
  name: workshop
spec:
  finalizers:
  - kubernetes
