k8s_resources/prepared/deployment-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: tkadlecp/hello_world_app:1.0
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
        name: hello-world
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-docker-hub
