k8s_resources/prepared/deployment-minimal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-minimal
  namespace: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        ports:
          - containerPort: 80
        imagePullPolicy: IfNotPresent
        name: nginx
      restartPolicy: Always
      imagePullSecrets:
        - name: secret-docker-hub
