k8s_resources/prepared/deployment-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-with-pv
  namespace: workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        ports:
          - containerPort: 80
        imagePullPolicy: IfNotPresent
        name: nginx-with-pv
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: pv-storage
      volumes:
        - name: pv-storage
          persistentVolumeClaim:
            claimName: pv-claim
