k8s_resources/prepared/deployment-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-with-secret
  namespace: workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
        - name: secret-docker-hub
      containers:
      - image: nginx
        ports:
          - containerPort: 80
        imagePullPolicy: IfNotPresent
        name: nginx-with-secret
        volumeMounts:
          - mountPath: "/usr/share/nginx/secret"
            name: secret-mount
      volumes:
        - name: secret-mount
          secret:
            secretName: secret-basic-auth
