k8s_resources/prepared/pod-minimal.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-minimal
  namespace: workshop
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: nginx
  restartPolicy: Never
  imagePullSecrets:
    - name: secret-docker-hub
