k8s_resources/prepared/svc-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-cluster-ip
  name: nginx-cluster-ip
  namespace: workshop
spec:
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
