k8s_resources/prepared/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-nodeport
  name: nginx-nodeport
  namespace: workshop
spec:
  ports:
  - nodePort: 30711
    port: 5679
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
