k8s_resources/prepared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: workshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.km
      http:
        paths:
          - path: /my-app
            pathType: Prefix
            backend:
              service:
                name: nginx-cluster-ip
                port:
                  number: 5678
